add pics and tags support
